--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,9 +1,56 @@
-*{
-    background-image: url(/Images/img1.jfif)  ;
-    background-position: no-repeat;
-    background-position: center;
-}
-h1{
+
+.title_hiw{
     text-align: center;
-    size: 100px;
+    margin-bottom: 50px;
+}
+
+.title_hiw h2{
+    font-size: 28px;
+    font-weight: 800;
+    /* margin-top: 70px; */
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 80px;
+} 
+.description{
+    font-size: 18px;
+    line-height: 1.428em;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+.bg-img{
+    position:absolute;
+    z-index: -5;
+    opacity: 0.2;
+    width: 100%;
+    height: 180%;
+}
+
+.img-2{
+    height: 250px;
+    border-radius: 115px;
+    /* position: absolute; */
+}
+.img-3{
+    height: 250px; 
+    border-radius: 50px;
+    margin-top: 33px;
+
+}
+.img-4{
+    /* padding-top: 10px; */
+    margin-top: 63px;
+    height: 250px;
+    border-radius: 50px;
+
+}
+.format{
+    padding: 50px;
+}
+p{
+    font-size: 20px;
+    padding: 10px;
+    margin: 0 50px;
+    opacity: 0.8;
 }
