--- a/CSS/style.css
+++ b/CSS/style.css
@@ -136,7 +136,7 @@ button.normal{
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url("pexels-photo-1483024.jpeg");
+    background-image: url("/The-Trojan-Horse_Clash_of_Codes/images/pexels-photo-1483024.jpeg");
     width: 100%;
     height: 70vh;
     background-size: cover;
@@ -153,7 +153,9 @@ button.normal{
     padding: 28px 0;
   }
   #banner h2 span{
-    color: #f1ff55;
+    color: #da860f;
+    font-weight: 800;
+    text-shadow: 100px solid black;
   }
   #banner button:hover{
     margin-top: 40px;
@@ -256,5 +258,3 @@ button.normal{
   border-radius: 50%;
   box-shadow: 0 5px 10px #3337;  
 }
-
-
