Modified CSS of "find a travel buddy" button

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,7 +119,7 @@ button.normal{
   margin: 194px -447px;
   width: 150%;
   font-size: 7rem;
-  color: #f45f24;
+  color: #f0e1dd;
 }
 /* #text1{
   position:absolute;
@@ -189,7 +189,7 @@ button.normal{
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url("/Images/pexels-photo-1483024.jpeg");
+    background-image: url("Images/pexels-photo-1483024.jpeg");
     width: 100%;
     height: 70vh;
     background-size: cover;
@@ -211,7 +211,8 @@ button.normal{
     text-shadow: 100px solid black;
   }
   #banner button:hover{
-    margin-top: 40px;
+    /* margin-top: 40px; */
+    font-size: 20px;
     background: #838802;
     color: #fff;
   }
