--- a/CSS/style.css
+++ b/CSS/style.css
@@ -189,13 +189,13 @@ button.normal{
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url("Images/pexels-photo-1483024.jpeg");
+    background-image: url("/Images/pexels-photo-1483024.jpeg");
     width: 100%;
     height: 70vh;
     background-size: cover;
     background-position: center;
   }
-
+  
   #banner h4{
     color: #fff;
     font-size: 16px;
@@ -209,6 +209,10 @@ button.normal{
     color: #da860f;
     font-weight: 800;
     text-shadow: 100px solid black;
+  }
+  #banner button {
+    border-radius: 20px;
+    border-color:20px solid black;
   }
   #banner button:hover{
     /* margin-top: 40px; */
